buildscript{
	ext {
		springBootVersion = '2.7.6'
		set('springCloudVersion', '2021.0.1')
	}
	repositories {
		mavenCentral()
	}
	dependencies {
		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
		classpath "io.spring.gradle:dependency-management-plugin:1.0.15.RELEASE"
	}
}

allprojects {

}

subprojects{

	apply plugin: 'java'
	apply plugin: 'org.springframework.boot'
	apply plugin: 'io.spring.dependency-management'

	group = 'com.teamzero'
	version = '0.0.1-SNAPSHOT'
	sourceCompatibility = '11'

	configurations {
		compileOnly {
			extendsFrom annotationProcessor
		}
	}

	repositories {
		mavenCentral()
	}

	dependencies {
		implementation 'org.springframework.boot:spring-boot-starter-web'
		implementation'org.springframework.boot:spring-boot-starter-validation'
		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
		implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
		implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
		implementation 'org.springframework.data:spring-data-envers'
		implementation 'org.springframework.boot:spring-boot-starter-mail'
		compileOnly 'org.projectlombok:lombok'
		runtimeOnly 'com.mysql:mysql-connector-j'
		annotationProcessor 'org.projectlombok:lombok'
		testImplementation 'org.springframework.boot:spring-boot-starter-test'
		testImplementation 'com.h2database:h2'   // 테스트용 db
	}

	tasks.named('test') {
		useJUnitPlatform()
	}

}
